--- a/style.css
+++ b/style.css
@@ -154,3 +154,234 @@ body {
         padding: 20px 26px;
     }
 }
+
+/*1.html*/
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+body {
+    margin: 0;
+    background-color: #C6BDFF;
+}
+
+h1,
+h2,
+h3,
+h4,
+p{
+    margin: 0;
+}
+
+body{
+    background-color: #c6bdff;
+}
+.top-menu {
+    background-color: #bdadff;
+    overflow: hidden;
+}
+.top-menu img{
+    width: 50px;
+    height: 50px;
+    float: left;
+    padding-right:10px;
+}
+.top-menu a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+.top-menu a:hover {
+    background-color: #ddd;
+    color: black;
+}
+@media (min-width:1440px){
+    .top-menu img{
+    width: 70px;
+    height: 70px;
+    float: left;
+    padding-right:10px;
+    }
+    .top-menu a {
+    font-size: 30px;
+    padding: 20px 26px;
+    }
+}
+@media (min-width:2560px){
+    .top-menu img{
+    width: 100px;
+    height: 100px;
+    float: left;
+    padding-right:10px;
+    }
+    .top-menu a {
+    font-size: 50px;
+    padding: 20px 26px;
+    }
+}
+.top-menu > div {
+    display: inline-block;
+    
+}
+
+/*레이아웃*/
+.header {
+    height: 50px;
+}
+
+.headline {
+    height: 120px;
+    margin-left: 40px;
+    margin-right: 40px;
+
+    text-align: center;
+}
+
+.deckRotate {
+    height: 420px;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+}
+
+.teamName {
+    padding-top: 20px;
+}
+
+.introduceMent {
+    padding-top: 10px;
+}
+
+
+.card1 {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+/*카드 마우스 반응*/
+.card1:hover {
+    transition: background-color 0.5s;
+    background-color: rgba(68, 56, 95, 0.6);
+}
+
+.card1-link:hover {
+    color: beige;
+}
+
+.modal-body {
+    width: 500px;
+    height: 350px;
+    overflow: hidden;
+    text-align: center;
+}
+
+
+.left {
+    background-color: gray;
+    width: 49%;
+    height: 90%;
+    display: inline-block;
+}
+
+.right {
+    /* background-color: orange; */
+    width: 220px;
+    height: 350px;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.right>card1 {
+    padding-top: 20px;
+    width: 100%;
+}
+
+.frame {
+    width: 100%;
+    height: 70%;
+    margin: 0;
+    background-color: blue;
+}
+
+.rightframe {
+    width: 100%;
+    height: 70%;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.photo {
+    display: inline-block;
+    position: absolute;
+    width: 46%;
+    top: 10%;
+    left: 26%;
+    transform: translate(-50%, -50%);
+}
+
+.photoframe {
+    width: 220px;
+    height: 350px;
+    overflow: hidden;
+    position: relative;
+    /*  background-color: orange;*/
+    display: inline-block;
+}
+
+.photoframe>img {
+    position: absolute;
+    width: 100%;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 0px solid transparent;
+    padding: 0;
+    font-size: 1rem;
+    border-radius: .25rem;
+}
+
+.btn card1Touch {
+    background-color: white;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.btn card1Touch:hover {
+    background-color: rgba(0, 0, 0, 0);
+    color: rgba(0, 0, 0, 0);
+}
+
+.mypostingbox1 {
+    width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: none;
+    background-color: #fff;
+}
+
+
+
