--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap');
 
+/* 전체 폰트 설정 */
+* {
+    font-family: "IBM Plex Sans KR", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* 기본 홈 설정 */
 body {
-    background-color: #c6bdff;
+    background-color: #bfb8ee !important;
     font-family: Arial, sans-serif;
+    text-align: center;
     margin: 0;
 }
-/*home.html*/
+
+/* 스크롤바 숨기기 */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+/*home.html 팀 소개 화면 CSS*/
 .content {
     padding: 40px;
     text-align: -webkit-center;
@@ -40,121 +55,33 @@ body {
     transform: rotate(25deg);
 }
 
+#team-content {
+    font-size: 30px;
+}
+
 /*topmenu.html*/
 .top-menu {
-    background-color: #bdadff;
+    background-color: #aea1ff;
     overflow: hidden;
 }
 .top-menu img{
     width: 50px;
     height: 50px;
     float: left;
-    padding-right:10px;
+    margin: 20px;
 }
 .top-menu a {
     float: left;
     display: block;
     color: black;
     text-align: center;
-    padding: 14px 20px;
+    padding: 34px 50px;
     text-decoration: none;
 }
 .top-menu a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-@media (min-width:1440px){
-    /*home.html*/
-    h1{
-        font-size: 40px;
-    }
-    .content-box p{
-        font-size: 30px;
-    }
-    .bulb{
-    top:5%;
-    left: 7%;
-    width:15%;
-    transform: rotate(-25deg);
-    }
-    .scribble{
-    bottom:30%;
-    right: 7%;
-    width:15%;
-    transform: rotate(25deg);
-    }
-
-    /*topmenu.html*/
-    .top-menu img{
-        width: 70px;
-        height: 70px;
-        float: left;
-        padding-right:10px;
-        }
-        .top-menu a {
-        font-size: 30px;
-        padding: 20px 26px;
-        }
-}
-
-@media (min-width:1620px){
-    /*home.html*/
-    h1{
-        font-size: 50px;
-    }
-    .content-box{
-        height:30vw;
-    }
-    .content-box p{
-        font-size: 30px;
-    }
-    .bulb{
-    top:8%;
-    left: 7%;
-    width:15%;
-    transform: rotate(-25deg);
-    }
-    .scribble{
-    bottom:-10%;
-    right: 7%;
-    width:15%;
-    transform: rotate(25deg);
-    }
-}
-
-@media (min-width:2560px){
-    /*home.html*/
-    h1{
-        font-size: 60px;
-    }
-    .content-box p{
-        font-size: 50px;
-    }
-    .bulb{
-    top:4%;
-    left: 7%;
-    width:15%;
-    transform: rotate(-25deg);
-    }
-    .scribble{
-    bottom:35%;
-    right: 7%;
-    width:15%;
-    transform: rotate(25deg);
-    }
-
-    /*topmenu.html*/
-    .top-menu img{
-        width: 100px;
-        height: 100px;
-        float: left;
-        padding-right:10px;
-    }
-    .top-menu a {
-        font-size: 50px;
-        padding: 20px 26px;
-    }
+    background-color: #8578b8;
+    color: rgb(221, 209, 231);
+    transition: 0.4s;
 }
 
 /*1.html*/
@@ -163,244 +90,17 @@ a {
     text-decoration: none;
 }
 
-body {
-    margin: 0;
-    background-color: #C6BDFF;
-}
-
-h1,
-h2,
-h3,
-h4,
-p{
-    margin: 0;
-}
-
-body{
-    background-color: #c6bdff;
-}
-.top-menu {
-    background-color: #bdadff;
-    overflow: hidden;
-}
-.top-menu img{
-    width: 50px;
-    height: 50px;
-    float: left;
-    padding-right:10px;
-}
-.top-menu a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-}
-.top-menu a:hover {
-    background-color: #ddd;
-    color: black;
-}
-@media (min-width:1440px){
-    .top-menu img{
-    width: 70px;
-    height: 70px;
-    float: left;
-    padding-right:10px;
-    }
-    .top-menu a {
-    font-size: 30px;
-    padding: 20px 26px;
-    }
-}
-@media (min-width:2560px){
-    .top-menu img{
-    width: 100px;
-    height: 100px;
-    float: left;
-    padding-right:10px;
-    }
-    .top-menu a {
-    font-size: 50px;
-    padding: 20px 26px;
-    }
-}
-.top-menu > div {
-    display: inline-block;
-    
-}
-
-/*레이아웃*/
-.header {
-    height: 50px;
-}
-
-.headline {
-    height: 120px;
-    margin-left: 40px;
-    margin-right: 40px;
-
-    text-align: center;
-}
-
-.deckRotate {
-    height: 420px;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: center;
-}
-
+/* 멤버 페이지 상단 헤드 */
 .teamName {
-    padding-top: 20px;
+    padding-top: 80px;
 }
-
 .introduceMent {
     padding-top: 10px;
+    padding-bottom: 80px;
+    font-size: 20px;
 }
-
-
-.card1 {
-    display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-/*카드 마우스 반응*/
-.card1:hover {
-    transition: background-color 0.5s;
-    background-color: rgba(68, 56, 95, 0.6);
-}
-
-.card1-link:hover {
-    color: beige;
-}
-
-.modal-body {
-    width: 500px;
-    height: 350px;
-    overflow: hidden;
-    text-align: center;
-}
-
-
-.left {
-    background-color: gray;
-    width: 49%;
-    height: 90%;
-    display: inline-block;
-}
-
-.right {
-    /* background-color: orange; */
-    width: 220px;
-    height: 350px;
-    display: inline-block;
-    overflow: hidden;
-}
-
-.right>card1 {
-    padding-top: 20px;
-    width: 100%;
-}
-
-.frame {
-    width: 100%;
-    height: 70%;
-    margin: 0;
-    background-color: blue;
-}
-
-.rightframe {
-    width: 100%;
-    height: 70%;
-    margin: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.photo {
-    display: inline-block;
-    position: absolute;
-    width: 46%;
-    top: 10%;
-    left: 26%;
-    transform: translate(-50%, -50%);
-}
-
-.photoframe {
-    width: 220px;
-    height: 350px;
-    overflow: hidden;
-    position: relative;
-    /*  background-color: orange;*/
-    display: inline-block;
-}
-
-.photoframe>img {
-    position: absolute;
-    width: 100%;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 0px solid transparent;
-    padding: 0;
-    font-size: 1rem;
-    border-radius: .25rem;
-}
-
-.btn card1Touch {
-    background-color: white;
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-}
-
-.btn card1Touch:hover {
-    background-color: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0);
-}
-
-.mypostingbox1 {
-    width: 500px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    display: none;
-    background-color: #fff;
-}
-
 
 /******************************************** 이예은 CSS ********************************************/
-
-
-/* 전체 폰트 설정 */
-* {
-    font-family: "IBM Plex Sans KR", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-/* 기본 홈 설정 */
-body {
-    background-color: #bfb8ee;
-    text-align: center;
-}
 
 /* 멤버 추가 입력 폼 스타일 */
 .memberbox {
@@ -416,7 +116,6 @@ body {
 /* div안에 있는 input 설정 (이렇게 해야 기본 색상이 바뀜) */
 .form-floating>input {
     background-color: transparent;
-    color: rgb(60, 50, 68);
     border: 1px solid transparent;
 }
 .form-floating:focus {
@@ -428,10 +127,9 @@ body {
 
 /* input 클릭 시 설정 */
 .form-control:focus {
-    background-color: transparent;
-    box-shadow:none;
-    border: 1px solid #6759a5;
-    color: rgb(60, 50, 68);
+    background-color: transparent !important;
+    box-shadow:none !important;
+    border: 1px solid #6759a5 !important;
 }
 
 /* 카드 스타일 */
@@ -440,7 +138,7 @@ body {
     margin: 20px auto;
 }
 .card {
-    border-radius: 50px;
+    border-radius: 50px !important;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .card-img-top {
@@ -448,13 +146,12 @@ body {
     height: auto;
     max-height: 700px;
     object-fit: cover;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border-top-left-radius: 50px !important;
+    border-top-right-radius: 50px !important;
 }
-
 /* 모달 스타일 */
 .modal-content {
-    background-color: #c6bff3;
+    background-color: #c6bff3 !important;
     color: black;
     border-radius: 10px;
 }
@@ -463,22 +160,27 @@ body {
 .modal-header,
 .modal-body,
 .modal-footer {
-    border: none;
+    border: none !important;
+}
+
+/* 상세 정보 이미지 크기 고정 */
+.img-fluid {
+    width: 150px;
+    height: 150px;
 }
 
 /* 기본 버튼 설정 */
 .btn {
-    background-color: #8d83ce;
+    background-color: #8d83ce !important;
     border-color: transparent;
-    color: white;
+    color: white !important;
 }
 .btn:hover {
-    background-color: #7e71b3;
+    background-color: #7e71b3 !important;
     border-color: transparent;
-    color: white;
 }
-.btn:focus{
-    box-shadow:none;
+button:focus{
+    box-shadow:none !important;
     outline: none;
 }
 
@@ -492,6 +194,10 @@ body {
     width: 100%;
 }
 
+#addbtn{
+    margin: 30px;
+}
+
 /* 멤버 카드 이벤트 */
 .card {
     cursor: pointer;
@@ -500,6 +206,17 @@ body {
 .card:hover {
     transform: translateY(-8px);
 }
+
+.border{
+    border-top-right-radius: 25px ;
+    border-bottom-right-radius: 25px;
+}
+
+.blogimg{
+    border-top-left-radius: 25px ;
+    border-bottom-left-radius: 25px;
+}
+
 /* 손원호 css */
 
 /* 타이틀 위치 값 */
